--- a/app/src/main/res/layout/activity_suratproses2.xml
+++ b/app/src/main/res/layout/activity_suratproses2.xml
@@ -70,7 +70,7 @@
         app:srcCompat="@drawable/img2" />
 
     <ImageView
-        android:id="@+id/imageView10"
+        android:id="@+id/imageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
