--- a/app/src/main/res/layout/activity_transkripnilai.xml
+++ b/app/src/main/res/layout/activity_transkripnilai.xml
@@ -5,8 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".TranskripNilaiActivity">
-
+    tools:context=".SurataktifActivity">
     <ImageView
         android:id="@+id/imageView18"
         android:layout_width="445dp"
@@ -16,18 +15,16 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/biru" />
-
     <ImageView
         android:id="@+id/imageView19"
-        android:layout_width="446dp"
-        android:layout_height="888dp"
-        android:layout_marginTop="168dp"
+        android:layout_width="704dp"
+        android:layout_height="872dp"
+        android:layout_marginTop="152dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.514"
+        app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/frameaktif" />
-
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
@@ -41,10 +38,9 @@
         app:layout_constraintHorizontal_bias="0.365"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.037" />
-
+        app:layout_constraintVertical_bias="0.072" />
     <TextView
-        android:id="@+id/textView23"
+        android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Nilai"
@@ -56,23 +52,19 @@
         app:layout_constraintHorizontal_bias="0.633"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.037" />
-
+        app:layout_constraintVertical_bias="0.073" />
     <ImageButton
-        android:id="@+id/ButtonImageB8"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/imagebacktranskrip"
+        android:layout_width="42dp"
+        android:layout_height="51dp"
         android:background="#4A8CC4"
-        android:padding="2dp"
-        android:contentDescription="button_back"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.043"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.064"
+        app:layout_constraintVertical_bias="0.075"
         app:srcCompat="@drawable/back" />
-
     <ImageView
         android:id="@+id/imageView20"
         android:layout_width="236dp"
@@ -83,55 +75,43 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/isitext" />
-
-
     <TextView
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="212dp"
         android:text="Deskripsi"
         android:textColor="#002649"
         android:textSize="25sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.318"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.173" />
-
+        tools:layout_editor_absoluteY="197dp" />
     <TextView
         android:id="@+id/textView6"
-        android:layout_width="222dp"
-        android:layout_height="91dp"
-        android:contentDescription="Deskripsi transkrip nilai, menjelaskan bahwa ini adalah dokumen yang mencatat semua mata kuliah dan nilai mahasiswa."
+        android:layout_width="210dp"
+        android:layout_height="74dp"
         android:justificationMode="inter_word"
-        android:padding="8dp"
         android:text="Transkrip nilai adalah dokumen yang memuat catatan semua mata kuliah dan nilai mahasiswa."
         android:textColor="#7D8BB7"
-        android:textSize="16sp"
+        android:textSize="13dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.203"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.324" />
-
-
+        app:layout_constraintVertical_bias="0.293" />
     <Button
-        android:id="@+id/buttonajukantranskrip"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/button"
+        android:layout_width="143dp"
+        android:layout_height="40dp"
         android:backgroundTint="@android:color/holo_orange_light"
-        android:padding="8dp"
         android:text="Ajukan"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.3"
+        app:layout_constraintHorizontal_bias="0.28"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.443" />
-
+        app:layout_constraintVertical_bias="0.37" />
     <ImageView
         android:id="@+id/imageView24"
         android:layout_width="wrap_content"
@@ -143,19 +123,23 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.276"
         app:srcCompat="@drawable/stikertranskrip" />
-
     <ImageView
         android:id="@+id/imageView25"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.436"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.646"
+        app:layout_constraintVertical_bias="0.499"
         app:srcCompat="@drawable/syarat" />
-
+    <ImageView
+        android:id="@+id/imageView26"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/syarat"
+        tools:layout_editor_absoluteX="47dp"
+        tools:layout_editor_absoluteY="532dp" />
     <TextView
         android:id="@+id/textView9"
         android:layout_width="65dp"
@@ -168,34 +152,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.591" />
-
-    <TextView
-        android:id="@+id/textView7"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="1. Fotocopy Kartu Pengenal Mahasiswa\n2. Fotocopy Kartu Studi Mahasiswa(KPM) Semester Berjalan\n3. Fotocopy Surat Pembayaran SPP yang Terakhir"
-        android:textColor="#ffffff"
-        android:textSize="11sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.443"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.643" />
-
-    <ImageView
-        android:id="@+id/imageView26"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.436"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.844"
-        app:srcCompat="@drawable/syarat" />
-
+        app:layout_constraintVertical_bias="0.466" />
     <TextView
         android:id="@+id/textView14"
         android:layout_width="86dp"
@@ -206,11 +163,22 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.77" />
-
+        app:layout_constraintVertical_bias="0.629" />
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="1. Fotocopy Kartu Pengenal Mahasiswa\n2. Fotocopy Kartu Studi Mahasiswa(KPM) Semester Berjalan\n3. Fotocopy Surat Pembayaran SPP yang Terakhir"
+        android:textColor="#ffffff"
+        android:textSize="11sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.504"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.511" />
     <TextView
         android:id="@+id/textView11"
         android:layout_width="wrap_content"
@@ -220,9 +188,8 @@
         android:textSize="11sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.278"
+        app:layout_constraintHorizontal_bias="0.316"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.84" />
+        app:layout_constraintVertical_bias="0.679" />
 </androidx.constraintlayout.widget.ConstraintLayout>
-
