--- a/app/src/main/res/layout/activity_rincianditolak.xml
+++ b/app/src/main/res/layout/activity_rincianditolak.xml
@@ -5,6 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".Liatproses2Activity">
 
     <ImageView
@@ -23,7 +24,6 @@
         android:layout_width="68dp"
         android:layout_height="69dp"
         android:background="#4A8CC4"
-        android:contentDescription="back"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.017"
@@ -33,11 +33,11 @@
         app:srcCompat="@drawable/back" />
 
     <TextView
-        android:id="@+id/textViewditolak"
+        android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Rincian Ditolak"
-        android:textColor="#4A8CC4"
+        android:textColor="#FFFFFF"
         android:textSize="25sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -51,10 +51,9 @@
         android:id="@+id/imageViewpengajuantolak"
         android:layout_width="400dp"
         android:layout_height="130dp"
-        android:layout_marginBottom="512dp"
+        android:layout_marginBottom="580dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/pengajuanditolak" />
 
@@ -91,12 +90,12 @@
         android:layout_marginBottom="464dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.384"
+        app:layout_constraintHorizontal_bias="0.493"
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/alasanditolak" />
 
     <ImageView
-        android:id="@+id/detailalasanditolak"
+        android:id="@+id/alasanditolak"
         android:layout_width="410dp"
         android:layout_height="470dp"
         android:layout_marginBottom="10dp"
